--- a/node/config.example.json
+++ b/node/config.example.json
@@ -1,10 +1,12 @@
 {
   "pg": {
-    "host": "192.168.0.105",
+    "host": "127.0.0.1",
     "port": 5432,
     "database": "application",
     "user": "application",
-    "password": "12345678"
+    "password": "12345678",
+    "dialect": "postgres"
   },
-  "jwt_secret": "jwt_secret"
+  "jwt_secret": "jwt_secret",
+  "base_url": "http://127.0.0.1:3000"
 }
