--- a/node/package.json
+++ b/node/package.json
@@ -9,6 +9,8 @@
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q ./bin/www\""
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
