--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -37,10 +37,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  intl: ^0.18.1
   auto_route: ^7.8.0
   flutter_bloc: ^8.1.3
   http: ^1.1.0
-  flutter_secure_storage: ^8.0.0
+  flutter_secure_storage: ^9.0.0
   shared_preferences: ^2.2.0
   json_annotation: ^4.8.1
   freezed_annotation: ^2.4.1
@@ -49,16 +50,16 @@ dependencies:
   rxdart: ^0.27.7
   flutter_form_builder: ^9.1.0
   form_builder_validators: ^9.0.0
-  dio: ^4.0.6
+  dio: ^5.4.0
   fluttertoast: ^8.2.2
   bloc_concurrency: ^0.2.2
-  flash: ^2.0.5
+  flash: ^3.0.5+2
   get_it: ^7.6.0
   retry: ^3.1.2
   path_provider: ^2.1.0
   collection: ^1.17.1
   injectable: ^2.3.0
-  connectivity_plus: ^4.0.2
+  connectivity_plus: ^5.0.2
   synchronized: ^3.1.0
   form_builder_file_picker: ^4.0.0
   mime_type: ^1.0.0
@@ -75,7 +76,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
   build_runner: ^2.4.6
   json_serializable: ^6.7.1
   freezed: ^2.4.2
