--- a/node/tsconfig.json
+++ b/node/tsconfig.json
@@ -15,6 +15,9 @@
     "strict": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
   },
+  "watchOptions": {
+    "watchFile": "dynamicPriorityPolling"
+  }
 }
