--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   http_parser: ^4.0.2
   form_builder_image_picker: ^4.0.0
   path: ^1.8.3
+  photo_view: ^0.14.0
 
 dev_dependencies:
   flutter_test:
